# aero-SEA

./: ARCHITECTURE.md  README.md  SETUP.md  pyproject.toml  requirements.txt
examples/: basic_example.py  line_junction_example.py  posttreatment_example.py
examples/examples/output/: wall_room.seaproj
examples/examples/output/posttreatment/: results.json
examples/output/: line_junction.seaproj  wall_room.seaproj
sea_engine/: __init__.py
sea_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sea_engine/core/: config.py  engine.py
sea_engine/gui/: __init__.py  main_window.py
sea_engine/models/: project.py
sea_engine/templates/: __init__.py
sea_engine/tests/: __init__.py
sea_engine/utils/: __init__.py  export.py  posttreatment.py  visualization.py
web/: README.md  package.json
web/backend/: main.py  requirements.txt
web/frontend/: index.html  package.json
web/frontend/src/: App.tsx
web/frontend/src/components/: GeometryViewer.tsx  Header.css  Header.tsx  Sidebar.css  Sidebar.tsx
web/frontend/src/pages/: ProjectEditor.tsx  ProjectList.tsx  ResultsViewer.tsx
web/frontend/src/styles/: App.css  index.css
web/frontend/src/utils/: api.ts
